startup-reviewboard/memcached-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  labels:
    app: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
        - name: memcached
          image: memcached:alpine
          args: ["-m", "128"]
          ports:
            - name: memcached
              containerPort: 11211
