startup-reviewboard/rb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.32.0 (HEAD)
  labels:
    io.kompose.service: reviewboard
  name: reviewboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: reviewboard
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.32.0 (HEAD)
      labels:
        io.kompose.network/reviewboard-default: "true"
        io.kompose.service: reviewboard
    spec:
      containers:
        - name: reviewboard
          image: beanbag/reviewboard:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /site
              name: startup-rb-data
      restartPolicy: Always
      volumes:
        - name: startup-rb-data
          persistentVolumeClaim:
            claimName: startup-rb-data-pvc
