startup-reviewboard/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: nginx
status:
  loadBalancer: {}
